--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "An intrusion detection system built with the XGBoost library and 
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "imblearn>=0.0",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.7",
     "pandas>=2.3.3",
